--- a/LibraryExam 12.10.21/src/main/webapp/templates/bookitem.html
+++ b/LibraryExam 12.10.21/src/main/webapp/templates/bookitem.html
@@ -1,6 +1,6 @@
 <div class="book-item">
     <img src="uploads/{{cover}}" />
-    <i>{{id}}</i>
+    <i id="bookid">{{id}}</i>
     <b>{{author}}</b>
     <p>{{title}}</p>
     <div class="book-delete" title="Удалить"></div>
