--- a/LibraryExam 12.10.21/src/main/webapp/templates/bookitem.html
+++ b/LibraryExam 12.10.21/src/main/webapp/templates/bookitem.html
@@ -1,8 +1,9 @@
 <div class="book-item">
-    <img src="uploads/{{cover}}" />
-    <i id="bookid">{{id}}</i>
-    <b>{{author}}</b>
-    <p>{{title}}</p>
-    <div class="book-delete" title="Удалить"></div>
-    <div class="book-edit" title="Редактировать"></div>
+    <img src="uploads/{{cover}}" /> <br/>
+    <i id="bookid">{{id}}</i><br/>
+    <b>Title: {{title}}</b>
+    <p>Author: {{author}}</p><br/>
+    <div class="tool-button tool-delete" title="Delete"></div>
+    <div class="tool-button tool-edit" title="Edit"></div>
+    <div class="tool-button tool-download" title="Download"></div>
 </div>
